FIXED: Dashboard: fix overlapping text in System Resources applet on blackmin.

--- a/apps/core/system/modules/dashboard/themes/default/css/1_style.css
+++ b/apps/core/system/modules/dashboard/themes/default/css/1_style.css
@@ -400,6 +400,8 @@ div.neo-applet-tdesc {
 	float:left;
 	margin-left: 15%;
     white-space:nowrap;
+    left:120px;
+    overflow:hidden;
 }
 div.neo-clearing {
 	clear:both;
